plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.springStudy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-gson:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'

    // hashing
    //implementation 'org.springframework.security:spring-security-core:5.8.3'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // mysql
    implementation 'mysql:mysql-connector-java:8.0.31'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //redis 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'

    // 이메일 전송을 위한 스타터
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // 웹소켓 통신
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

}

tasks.named('test') {
    useJUnitPlatform()
}
